<resources>
    <string name="action_settings">Settings</string>
    <string name="usuario">Prueba</string>
    <string name="seccion_1">Seccion 1</string>
    <string name="seccion_2">Seccion 2</string>
    <string name="seccion_3">Seccion 3</string>
    <string name="app_name">Quip</string>
    // Strings botones
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    // Strings dialogo borrar
    <string name="mensaje_confirm_borrar">¿Seguro que quieres borrar esta nota?</string>
    <string name="etiqueta_dialogo_borrar">Eliminar: </string>
    // nota
    <string name="nota">Nota</string>

    <string name="titulo">Titulo</string>

    <string name="mAdd">Añadir</string>

    <string name="mBuscar">Buscar</string>
    <string name="mDel">Eliminar</string>
    <string name="mConfig">Configuración</string>

    <string name="mAddNota">Añadir Nota</string>

    <string name="mAddAudio">Grabación</string>

    <string name="mAddImg">Seleccionar Imagen</string>

    <string name="mListNotas">Mis Notas</string>
    <string name="mNotas">Mis notas</string>

    <string name="m3Add">Añadir</string>

    <string name="m3Recursos">Recursos</string>

    <string name="mAddList">Crear Lista</string>
    <string name="btAudio">Añadir Audio</string>

    <string name="guardar">Guardar</string>

    <string name="addlista">Añadir lista</string>
    <string name="opciones">Otras Opciones</string>

    <!-- salvado de datos XAMPP -->
    <string name="action_sync">Sincronizar</string>
    <string name="empty_list">No hay Notas</string>
    <string name="addAudio2">Añadir audio</string>
    <string name="fecha">fecha no encontrada</string>
    <string name="tvQuip">Quip</string>
    <string name="provider_authority">ruben.dam.izv.com.proyecto_0.contentprovider.Provider</string>
    <string name="account_type">ruben.dam.izv.com.proyecto_0.account</string>
    <string name="title_activity_vista_localizacion">Map</string>

</resources>
