<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dialogo_fragment2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="vistas.vistas.notas.DialogoFragment">
    <Button
        android:text="@string/mAddImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAddImg"
        android:gravity="left|center_vertical|center_horizontal"
        android:background="@android:color/transparent"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:drawableLeft="@drawable/ic_action_imagen"
        android:drawablePadding="20dp" />

    <Button
        android:text="@string/btAudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAddAudio"
        android:gravity="left|center_vertical|center_horizontal"
        android:background="@android:color/transparent"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:drawableLeft="@drawable/ic_action_mic"
        android:drawablePadding="20dp" />

    <Button
        android:text="@string/mAddList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btaddList"
        android:background="@android:color/transparent"
        android:gravity="left|center_vertical|center_horizontal"
        android:paddingLeft="10dp"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:drawableLeft="@drawable/ic_action_list"
        android:drawablePadding="20dp" />

</LinearLayout>
